# G4_LaBr

./: .gitignore  CMakeLists.txt  Run.py  Run_Beamspot.py  Run_Distance.py
analysis/: Analysis - Beamspot.ipynb  Analysis - Position.ipynb  Analysis.ipynb  Analyze.py  Convert.ipynb  Convert.py  Dgtz.py  PileUp.py  Plot - Beamspot.ipynb  Plot - Position.ipynb  Reso.py
analysis/results/: 15O.txt  eff.txt
analysis/results/beamspot/: 15O.txt
analysis/results/position/: 137Cs.txt  22Na.txt  60Co.txt
data/: 13N.txt  14N.txt  15O.txt  16O.txt  24Mg.txt  28Si.txt
include/: ActionInitialization.hh  Analysis.hh  EventAction.hh  GeometryManager.hh  GeometryManagerMessenger.hh  PhysicsList.hh  PrimaryGeneratorManager.hh  RunAction.hh
include/generator/GammaDecayScheme/: GammaDecaySchemeGen.hh  Level.hh  LevelScheme.hh
include/generator/IsotropicGun/: IsotropicGunGen.hh
include/generator/NuclideGun/: NuclideGunGen.hh
include/generator/PositronGun/: PositronGunGen.hh
include/geometry/: CeBrDetector.hh  GeometryObject.hh  LaBr1Detector.hh  LaBr2Detector.hh  LaBrDetector.hh  TargetChamber.hh  TargetHolder.hh
mac/: 137Cs.mac  14N_pg.mac  15O.mac  22Na.mac  60Co.mac  gammaScheme.mac  init.mac  init_vis.mac  isotropicGun.mac  nuclideGen.mac  positronGun.mac  singleGamma.mac
mesh/: chamber.FCStd  chamber.ply  chamber.stl  chamber.stp
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  GeometryManager.cc  GeometryManagerMessenger.cc  PhysicsList.cc  PrimaryGeneratorManager.cc  RunAction.cc  SteppingAction.cc  main.cc
src/generator/GammaDecayScheme/: GammaDecaySchemeGen.cc  Level.cc  LevelScheme.cc
src/generator/IsotropicGun/: IsotropicGunGen.cc
src/generator/NuclideGen/: NuclideGunGen.cc
src/generator/PositronGun/: PositronGen.cc
src/geometry/: CeBrDetector.cc  GeometryObject.cc  LaBr1Detector.cc  LaBr2Detector.cc  LaBrDetector.cc  TargetChamber.cc  TargetHolder.cc
